Fixed some bugs in collapsable left side bar

--- a/src/components/layout/Dashboard/Favourities/index.css
+++ b/src/components/layout/Dashboard/Favourities/index.css
@@ -28,10 +28,19 @@
   /* font-weight: ; */
   margin-bottom: -2px;
 }
-
-.heading-css {
+.white-text-css-10 {
   color: white;
-  margin-left: 5%;
+}
+
+.heading-css-3 {
+  display: flex;
+  align-content: space-around;
+  justify-content: space-around;
+
+  color: white;
+  /* margin-left: 5%; */
+  font-size: xx-large;
   margin-top: 3%;
   margin-bottom: -1%;
+  border-bottom: 1px solid;
 }
